# bappy-script

./: Cargo.toml  README.md  artifacts.html  bappy-script-installer.ps1.txt  bappy-script-installer.sh.txt  changelog.html  index.html  oranda.json
.github/workflows/: release.yml  rust.yml
changelog/: v0.0.1-fakeversion.html  v0.1.0.html
src/: checker.rs  interpretter.rs  interpretter_ast.rs  interpretter_cfg.rs  main.rs  parser.rs  passes.rs
src/tests/: cfg_snaps.rs  mod.rs  typed_compile_fail.rs  typed_parse_fail.rs  typed_run_fail.rs  typed_run_pass.rs  untyped_compile_fail.rs  untyped_parse_fail.rs  untyped_run_fail.rs  untyped_run_pass.rs
src/tests/snapshots/: bappy_script__tests__cfg_snaps__basics.snap  bappy_script__tests__cfg_snaps__func_names_are_paths.snap  bappy_script__tests__cfg_snaps__loop_basics.snap
